z-index fix

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,7 +2,7 @@
   @import '~styles/variables';
 
   position: absolute;
-  z-index: 10;
+  z-index: 1000;
   width: 100%;
 
   //background: $mask;
